// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path 1`] = `
<path
  class="silky-path "
  d="M 10,30 A 20,20 0,0,1 50,30 A 20,20 0,0,1 90,30 Q 90,60 50,90 Q 10,60 10,30 z"
/>
`;

exports[`Path with Emotion 1`] = `
.emotion-0 {
  color: black;
}

<path
  class="silky-path emotion-0"
  d="M 10,30 A 20,20 0,0,1 50,30 A 20,20 0,0,1 90,30 Q 90,60 50,90 Q 10,60 10,30 z"
/>
`;

exports[`Path with custom class 1`] = `
<path
  class="silky-path foo"
  d="M 10,30 A 20,20 0,0,1 50,30 A 20,20 0,0,1 90,30 Q 90,60 50,90 Q 10,60 10,30 z"
/>
`;

exports[`Path with pathLength 1`] = `
<path
  class="silky-path "
  d="M 10,30 A 20,20 0,0,1 50,30 A 20,20 0,0,1 90,30 Q 90,60 50,90 Q 10,60 10,30 z"
  pathLength="2"
/>
`;
